--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <link rel="icon" type="image/svg+xml" href="/supapwn.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Supapwn</title>
+    <script
+      defer
+      src="https://umami-qs0c004ww04o0c0o8woocwws.noah.dev/script.js"
+      data-website-id="7f7430b7-17c0-4c28-be0c-af0a6fac4fd3"
+    ></script>
   </head>
   <body>
     <div id="root"></div>
